# LendQ

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  Dockerfile  LendQ.sln  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/LendQ.Api/: LendQ.Api.csproj  LendQ.Api.http  Program.cs  appsettings.json
backend/LendQ.Api/Controllers/: AdminController.cs  AuthController.cs  DashboardController.cs  HealthController.cs  LoansController.cs  NotificationsController.cs  PaymentsController.cs  RolesController.cs  UsersController.cs
backend/LendQ.Api/Extensions/: ClaimsPrincipalExtensions.cs
backend/LendQ.Api/Filters/: GlobalExceptionFilter.cs  ValidationFilter.cs
backend/LendQ.Api/Middleware/: RequestIdMiddleware.cs  SecurityHeadersMiddleware.cs
backend/LendQ.Api/Properties/: launchSettings.json
backend/LendQ.Application/: DependencyInjection.cs  LendQ.Application.csproj
backend/LendQ.Application/Mapping/: MappingProfile.cs
backend/LendQ.Application/Services/: IAuditService.cs  IAuthService.cs  IDashboardService.cs  ILoanService.cs  INotificationService.cs  IPaymentService.cs  IRoleService.cs  IUserService.cs
backend/LendQ.Application/Validators/: CreateChangeRequestRequestValidator.cs  (+7 more)
backend/LendQ.Infrastructure/: Class1.cs  DependencyInjection.cs  LendQ.Infrastructure.csproj
backend/LendQ.Tests/: LendQ.Tests.csproj  UnitTest1.cs
backend/app/: __init__.py  celery_app.py  config.py  extensions.py  seed.py
backend/instance/: test.db
backend/migrations/: env.py
backend/tests/: conftest.py  factories.py
(+861 files in other folders)
